# phone-call-transcription

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SETUP.md  benchmark-whisper.sh  config.txt  configure.py  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  docker.env  prompt_example_customer_service.txt  prompt_example_medical_consultation.txt  prompt_example_meeting_notes.txt  prompt_example_sales_call.txt  prompt_template.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run-native.sh  structured_prompt_example.txt  test_faster_whisper.py  test_ollama.py  test_structured_output.py  transcribe_and_summarise.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: STRUCTURED_OUTPUT.md
