[tool.poetry]
name = "transcribe"
version = "0.1.0"
description = "Transcribe and summarise audio files"
authors = ["John Hegs <john@hegs.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
speechrecognition = "^3.10.0"
requests = "^2.31.0"
tqdm = "^4.67.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
